restructure css to ensure page legibility on mobile

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,6 @@
 #contact-container {
 	max-width: 700px;
-  min-width: 25em;
+  width: 25em;
 	box-sizing: border-box;
 	color: var(--highlight);
 	display: flex;
@@ -43,6 +43,7 @@ button {
 	border-color: var(--highlight);
 	border-width: 1px;
 	border-style: solid;
+  margin-bottom: 2em;
 
 }
 
@@ -50,3 +51,9 @@ button:hover {
 	background-color: var(--highlight);
 	color: var(--background);
 }
+
+@media (max-width: 800px) {
+  #contact-container {
+  }
+}
+
