--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Inter');
 
 :root {
-  --highlight: #eaeaea;
+  --highlight: #eae6dc;
   --background: #181818;
 }
 
@@ -44,6 +44,9 @@ a {
   cursor: pointer;
 }
 
+a:hover {
+  text-decoration: underline;
+}
 
 .main {
 	display: flex;
@@ -61,8 +64,8 @@ a {
 @media (max-width: 800px) {
 	body {
 		margin-top: 30px;
-        margin-left: 1em;
-        margin-right: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
 	}
 
 	.main {
@@ -73,6 +76,10 @@ a {
 	
 	#content {
 		min-height: 10rem;
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 	}
 
 	#menu {
